kubernetes/ingress/customers-service-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: spring-petclinic
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: customers-service-ingress
  labels:
    app: customers-service
spec:
  rules:
  - host: petclinic.com
    http:
      paths:
      - pathType: ImplementationSpecific
        path: /api/gateway(/|$)(.*)
        backend:
          service:
            name: customers-service
            port:
              number: 8081
      - pathType: ImplementationSpecific
        path: /api/customer(/|$)(.*)
        backend:
          service:
            name: customers-service
            port:
              number: 8081
