kubernetes/ingress/vets-service-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: spring-petclinic
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: vets-service-ingress
  labels:
    app: vets-service
spec:
  rules:
  - host: petclinic.com
    http:
      paths:
      - pathType: ImplementationSpecific
        path: /api/vet(/|$)(.*)
        backend:
          service:
            name: vets-service
            port:
              number: 8083
