kubernetes/ingress/visits-service-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: spring-petclinic
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: visits-service-ingress
  labels:
    app: visits-service
spec:
  rules:
  - host: petclinic.com
    http:
      paths:
      - pathType: ImplementationSpecific
        path: /api/visit(/|$)(.*)
        backend:
          service:
            name: visits-service
            port:
              number: 8082
